--- a/public/static/css/custom.css
+++ b/public/static/css/custom.css
@@ -387,6 +387,7 @@ table {
     font-size: 14px; 
 }
 th, td {
+    min-width: 150px;
     padding-left: 10px;
     padding-right: 10px;
     border: 1px solid #999;
