Added simple error handling, need to develop further

--- a/views/partials/adminpanel.hbs
+++ b/views/partials/adminpanel.hbs
@@ -137,8 +137,8 @@
           <ul>
           {{#each list_info_subtypes}}
             <li><span>{{subname}} &nbsp; &nbsp; ( {{parent.name}} )</span> &nbsp; 
-            <a class="addn" onclick="showModal( 41, '{{id}}', '{{parent._id}}', 'Header type: &nbsp;&nbsp;{{parent.name}}','{{subname}}','{{message}}',0, 'Edit the booking SUB-type name:', '{{infotype}}','{{infowebpage}}', '{{actionmsg}}', 0)" href="#"> edit </a> &nbsp; 
-            <a class="addn" onclick="showModal( 42, '{{id}}', '{{parent._id}}', 'Header type: &nbsp;&nbsp;{{parent.name}}','{{subname}}','',0, 'Delete the booking SUB-type ?', '','', '',0)" href="#"> delete </a> &nbsp; 
+            <a class="addn" onclick="showModal( 41, '{{id}}', '{{parent._id}}', 'Header type: &nbsp;&nbsp;{{parent.name}}','{{subname}}','{{message}}',0, 'Edit the info SUB-type name:', '{{infotype}}','{{infowebpage}}', '{{actionmsg}}', 0)" href="#"> edit </a> &nbsp; 
+            <a class="addn" onclick="showModal( 42, '{{id}}', '{{parent._id}}', 'Header type: &nbsp;&nbsp;{{parent.name}}','{{subname}}','',0, 'Delete the info SUB-type ?', '','', '',0)" href="#"> delete </a> &nbsp; 
             <br/>
           {{/each}}
           </ul>
