--- a/views/bookform.hbs
+++ b/views/bookform.hbs
@@ -41,18 +41,30 @@
       </div>
           
       <div id="right">
+
+          {{#if expressFlash}}
+              <div class="alert alert-success">{{ expressFlash }}</div>
+          {{/if}}
+
+          {{#if expressFailureFlash}}
+              <div class="alert alert-warning">{{ expressFailureFlash }}</div>
+          {{/if}}
+
+
         <div class="boxedtransp">
             <legend>&nbsp; &nbsp;Booking:</legend>
-            {{!-- <p style="margin-left:15px">Please make your booking for: </p> --}}
+            
             <span style="margin-left:15px">
                 {{!-- THIS part send complex array of data and uses JS function to render subnmame --}}
                 {{#if for_tables }}
                     {{showSubname for_tables}}
                 {{/if}}
             </span>
+
             <br/>
             {{> bookpartial}}
         </div>
+
       </div>
     </div>
 
