--- a/views/infoform.hbs
+++ b/views/infoform.hbs
@@ -72,7 +72,7 @@
                         <br/><br/>
                     {{/if}}
                     <div class="col-md-3">
-                        <button class="col-md-9 button1">Got it</button>
+                        {{!-- <button class="col-md-9 button1">Got it</button> --}}
                         <br/><br/>
                     </div>
                     <br/><br/><br/>
