Work on validating user input using Express-validator is done

--- a/views/guestsummary.hbs
+++ b/views/guestsummary.hbs
@@ -86,7 +86,7 @@
 
         <br/><br/>
           {{#if list_buys}}
-            <label style="color:green;font-size:18px;">&nbsp; &nbsp; Your buys: </label> ( sorted by date )
+            <label style="color:green;font-size:18px;">&nbsp; &nbsp; Your purchases: </label> ( sorted by date )
             <ul>
             {{#each list_buys}}
               {{#if buyname}}
