--- a/views/partials/modalpartial.hbs
+++ b/views/partials/modalpartial.hbs
@@ -31,7 +31,7 @@
             <input id="btprice" size="10" type="text" name="price" style="display: none"/>
             <input id="btactionmsg" size="60" type="text" name="actionmsg" placeholder="action message (3rd column-book now, buy ticket, more info, etc.)" style="margin-top:10px;display: none"/>
             <br/>
-            <button id="Submit" class="button1" onclick="formSubmit()" style="margin-top:10px;">Submit</button>
+            <button id="Submit" class="button1" onclick="return formSubmit();" style="margin-top:10px;">Submit</button>
             <button type="button" class="button2" onclick="modal.style.display = 'none';" style="margin-top:10px;">Cancel</button>
 
           </form>
