applied Promises to tables Recounstruction method to avoid callbacks indentations

--- a/views/partials/adminpanel.hbs
+++ b/views/partials/adminpanel.hbs
@@ -3,7 +3,7 @@
         <ul>
         <li><a onclick="showModal( 10, '', '', '','sub-name','',0, 'Add a new header type:', '','', '', 0)" href="#"> add new header type </a>
           <span style="display:inline-block; width: 80px;"></span>
-          <a data-toggle="tooltip" data-placement="bottom" title='Upon a click it deletes all changes made by you to Mongoose collections, restores all initial entries to collections as if you never had changed anything. Defaults are auto-restored every night at 4 a.m. EST !' onclick="" href="#">( Undo all changes, restore defaults )</a>
+          <a data-toggle="tooltip" data-placement="bottom" title='Upon a click it deletes all changes made by you to Mongoose collections, restores all initial entries to collections as if you never had changed anything. Defaults are auto-restored every night at 4 a.m. EST !'  href="/restoredefaults">( Undo all changes, restore defaults )</a>
         </li>
         <li><a  href="#"  onclick="myFunction('myDIV')">edit / delete existing header type</a><span style="color:dimgrey;font-size:12px;"> &nbsp; ( {{{headertypes}}} added )</span><br/></li>
         <div id="myDIV" style="display:none">
