added code that restores default chats using Promises, resolved few bugs

--- a/views/guestsummary.hbs
+++ b/views/guestsummary.hbs
@@ -52,6 +52,10 @@
           {{/if}}
 
         <div class="boxedtransp">
+          <h4>List of your bookings and purchases:</h4>
+          <span style="font-size=14px;color:gray;">(to make a new booking or purchase use action buttons in the last column of the table. In this demo version all bookings / purchases are cleared off every night or if defaults are restored)</span>
+        </div>
+        <div class="boxedtransp">
         {{!-- <div id="rightpanel"></div>
         {{> sendform}} --}}
 
