moved forecasting reading using 3rd party API to server side. Used .ENV to hide api key

--- a/views/partials/leftpanel.hbs
+++ b/views/partials/leftpanel.hbs
@@ -21,8 +21,8 @@
   </head>
 
   <body>    
-    <script type="text/javascript" src="/js/weather.js"></script>
-    <script type="text/javascript" src="/js/weatherScheduler.js"></script>
+    {{!-- <script type="text/javascript" src="/js/weather.js"></script>
+    <script type="text/javascript" src="/js/weatherScheduler.js"></script> --}}
 
       
     <div id="weather_placeholder"></div>
